--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: ifconfig -a
+      run: ifconfig eth0:0 10.1.0.45 netmask 255.255.0.0 up
     - name: Run a multi-line script
       run: |
-          cd /data/
-          ls -ltr
+          ifconfig -a
