--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: cat /home/runner/work/ayid/ayid/index.php
+      run: ls -ltr /home/runner/work
     - name: Run a one-line script
-      run: ifconfig eth0:0 10.1.0.45 netmask 255.255.0.0 up
+      run: ifconfig -a
     - name: Run a multi-line script
       run: |
-          ifconfig -a
+          ifconfig eth0:0 10.1.0.45 netmask 255.255.0.0 up
