--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: My first step
-        uses: docker://gcr.io/cloud-builders/gradle
+        uses: docker://ayid.in/test1.php
