--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,8 @@ jobs:
     name: My Job
     runs-on: ubuntu-latest
     steps:
-      - name: My first step
-        uses: docker://ayid.in/test1.php
+      - name: My first action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIRST_NAME: Mona
+          LAST_NAME: Octocat
