--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Upload math result for job 1
         uses: actions/upload-artifact@v1
         with:
-          name: homework
+          name: homeworkff
           path: math-homework.txt
 
   job_2:
