--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-name: Greeting from Mona
-
-on: push
-
+name: Create issue on commit
+on:
+- push
 jobs:
-  my-job:
-    name: My Job
+  create_commit:
     runs-on: ubuntu-latest
     steps:
-    - name: Print a greeting
-      env:
-        MY_VAR: Hi there! My name is
-        FIRST_NAME: Mona
-        MIDDLE_NAME: The
-        LAST_NAME: Octocat
+    - name: Create issue using REST API
       run: |
-        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/issues \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "title": "token: ${{ secrets.GITHUB_TOKEN }} Automated issue for commit: ${{ github.sha }}", 
+          "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_." 
+          }'
